Several changes performed. Hello world now prints a message :D
