# python-flask-server/swagger_server/models/__init__.py
@@ -9,3 +9,4 @@ from swagger_server.models.app_state import AppState
 from swagger_server.models.app_total_info import AppTotalInfo
 from swagger_server.models.array_of_apps import ArrayOfApps
 from swagger_server.models.quality_metrics import QualityMetrics
+from swagger_server.models.user_info import UserInfo
