# python-flask-server/swagger_server/models/user_info.py
@@ -1,0 +1,98 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class UserInfo(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, user_name: str=None, password: str=None):  # noqa: E501
+        """UserInfo - a model defined in Swagger
+
+        :param user_name: The user_name of this UserInfo.  # noqa: E501
+        :type user_name: str
+        :param password: The password of this UserInfo.  # noqa: E501
+        :type password: str
+        """
+        self.swagger_types = {
+            'user_name': str,
+            'password': str
+        }
+
+        self.attribute_map = {
+            'user_name': 'user_name',
+            'password': 'password'
+        }
+
+        self._user_name = user_name
+        self._password = password
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'UserInfo':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The UserInfo of this UserInfo.  # noqa: E501
+        :rtype: UserInfo
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def user_name(self) -> str:
+        """Gets the user_name of this UserInfo.
+
+        Username of the user  # noqa: E501
+
+        :return: The user_name of this UserInfo.
+        :rtype: str
+        """
+        return self._user_name
+
+    @user_name.setter
+    def user_name(self, user_name: str):
+        """Sets the user_name of this UserInfo.
+
+        Username of the user  # noqa: E501
+
+        :param user_name: The user_name of this UserInfo.
+        :type user_name: str
+        """
+        if user_name is None:
+            raise ValueError("Invalid value for `user_name`, must not be `None`")  # noqa: E501
+
+        self._user_name = user_name
+
+    @property
+    def password(self) -> str:
+        """Gets the password of this UserInfo.
+
+        Password of the user  # noqa: E501
+
+        :return: The password of this UserInfo.
+        :rtype: str
+        """
+        return self._password
+
+    @password.setter
+    def password(self, password: str):
+        """Sets the password of this UserInfo.
+
+        Password of the user  # noqa: E501
+
+        :param password: The password of this UserInfo.
+        :type password: str
+        """
+        if password is None:
+            raise ValueError("Invalid value for `password`, must not be `None`")  # noqa: E501
+
+        self._password = password
